Fix news cards on smaller screens

--- a/css/home_news.css
+++ b/css/home_news.css
@@ -65,13 +65,28 @@ body {
   z-index: 1;
 }
 
-.news-image {
-  padding-top: 42px;
+.news-image-exhibition {
+  background-image: url("../images/exhibition.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 46%;
 }
-.card-body {
+
+.news-image-award {
+  background-image: url("../images/award.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 46%;
+  width: 100%;
+}
+
+.news-card-body {
   overflow-y: auto;
   height: 500px;
 }
+
 /* Media Queries */
 
 /* orientation : landscape */
@@ -137,5 +152,17 @@ body {
     margin-top: 10px;
     padding-top: 10px;
     margin-bottom: 100px;
+  }
+
+  #exhibition,
+  #award {
+    flex-direction: column !important;
+    height: 500px;
+  }
+
+  .news-image-exhibition,
+  .news-image-award {
+    min-height: 30%;
+    margin-top: 20px;
   }
 }
